# kgrdf

./: .bumpversion.cfg  .cookiecutterrc  .editorconfig  .nitpick.toml  .pylintrc  CHANGELOG.rst  LICENSE  MANIFEST.in  README.rst  invoke.yaml  mypy.ini  old.toml  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql.yml
docs/reference/: index.rst  kgrdf.rst
docs/source/: conf.py  installation.rst  usage.rst
src/kgrdf/: __main__.py  cli.py
