[metadata]
name='kgrdf'
version='0.1.0'
license= "MIT"
url='https://github.com/KGerring/kgrdf'
author='KGerring'
author_email='KGerring@gmail.com'

classifiers =
    License :: OSI Approved :: MIT License
    Typing :: Typed
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Utilities


include_package_data=True

[options]
zip_safe = False
install_requires =
    click
    importlib-metadata; python_version<"3.8"

[options.entry_points]
console_scripts =
    kg_rdf = kgrdf.cli:main

[bdist_wheel]
universal = 1

[flake8]
# http://www.pydocstyle.org/en/2.1.1/error_codes.html
# Ignoring W503: https://github.com/python/black#line-breaks--binary-operators
# Ignoring "D202 No blank lines allowed after function docstring": black inserts a blank line.
ignore = "D107,D202,D203,D401,E203,E402,E501,W503"
max-line-length = 120
inline-quotes = "double"
exclude = ".tox,build,docs"

[isort]
line_length = 120
skip = ".tox,build"
known_first_party = "tests"
# The configuration below is needed for compatibility with black.
# https://github.com/python/black#how-black-wraps-lines
# https://github.com/PyCQA/isort#multi-line-output-modes
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true

[tool:black]
line-length = 120

[tool:pytest]
testpaths = tests
norecursedirs =
    migrations
addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short

